syntax = "proto3";

package proto;

import "google/protobuf/struct.proto";

option go_package = "./;services";

service ConfigurationService {
  rpc CreateConfiguration(CreateConfigurationRequest) returns (Configuration);
  rpc UpdateConfiguration(UpdateConfigurationRequest) returns (Configuration);
  rpc DeleteConfiguration(DeleteConfigurationRequest) returns (DeleteConfigurationResponse);
  rpc QueryConfigurations(QueryConfigurationRequest) returns (QueryConfigurationResponse);
  rpc GetConfiguration(GetConfigurationRequest) returns (Configuration);
}

service TemplateService {
  rpc CreateTemplate(CreateTemplateRequest) returns (Template);
  rpc UpdateTemplate(UpdateTemplateRequest) returns (Template);
  rpc DeleteTemplate(DeleteTemplateRequest) returns (DeleteTemplateResponse);
  rpc QueryTemplates(QueryTemplatesRequest) returns (QueryTemplatesResponse);
  rpc GetTemplate(GetTemplateRequest) returns (Template);
}

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (Message);
  rpc UpdateMessageStatus(UpdateMessageRequest) returns (Message);
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
  rpc QueryMessages(QueryMessagesRequest) returns (QueryMessagesResponse);
  rpc GetMessage(GetMessagesRequest) returns (QueryMessagesResponse);
}

message ErrorResponse {
  Error error = 1;
}

message Error {
  int64 code = 1;
  string message = 2;
  Service service = 3;
  google.protobuf.Struct args = 4;
}

message Service {
  string name = 1;
  string uuid = 2;
}

message Configuration{
  string id = 1;
  string classId = 2;
  string parentId = 3;
  string appId = 4;
  string name = 5;
  bool persist = 6;
  repeated string states = 7;
  string type = 8;
  string mode = 9;
  string createdAt = 10;
  string updatedAt = 11;
  Policy statusCallback = 12;
  repeated Action actions = 13;
  CustomSmsConfiguration customSmsConfiguration = 14;
  CustomEmailConfiguration customEmailConfiguration = 15;
  CustomFeishuConfiguration customFeishuConfiguration = 16;
  CustomDingTalkConfiguration customDingTalkConfiguration = 17;
}

message Template{
  string id = 1;
  string messageTemplateId = 2;
  string name = 3;
  string type = 4;
  string content = 5;
  string createdBy = 6;
  string language = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message Message {
  string id = 1;
  string linkageId = 2;
  string appId = 3;
  string openId = 4;
  string classId = 5;
  string subclassId = 6;
  string messageTemplateId = 7;
  string content = 8;
  string source = 9;
  string status = 10;
  repeated string target= 11;
  google.protobuf.Struct statusSync = 12;
  string createdAt = 13;
  string updatedAt = 14;
  repeated MessageAction actions = 15;
}

message Policy {
  string kafka = 1;
  string http = 2;
}

message Action {
  string name = 1;
  string tips = 2;
  ActionTrigger action = 3;
  string nextAction = 4;
}

message ActionTrigger {
  string type = 1;
  string url = 2;
  string method = 3;
  google.protobuf.Struct query = 4;
  google.protobuf.Struct body = 5;
}

message CreateConfigurationRequest {
  string classId = 1;
  string parentId = 2;
  string appId = 3;
  string name = 4;
  bool persist = 5;
  repeated string states = 6;
  string type = 7;
  string mode = 8; // push , pull , email  sms, feishu
  Policy statusCallback = 9;
  repeated Action actions = 10;
  CustomSmsConfiguration customSmsConfiguration = 11;
  CustomEmailConfiguration customEmailConfiguration = 12;
  CustomFeishuConfiguration customFeishuConfiguration = 13;
  CustomDingTalkConfiguration customDingTalkConfiguration = 14;
}

message UpdateConfigurationRequest {
  string classId = 1;
  string parentId = 2;
  string appId = 3;
  string name = 4;
  bool persist = 5;
  repeated string states = 6;
  string type = 7;
  string mode = 8;
  Policy statusCallback = 9;
  repeated Action actions = 10;
}

message DeleteConfigurationRequest {
  string id = 1;
}

message DeleteConfigurationResponse {
  string message = 1;
}

message GetConfigurationRequest {
  string id = 1;
}

message QueryConfigurationRequest {
  string name = 1;
  string type = 2;
  string mode = 3;
  string parentId = 4;
  string appId = 5;
  int64 page = 6;
  int64 limit = 7;
  string order = 8;
  string sort = 9;
}

message QueryConfigurationResponse {
  int64 page = 1;
  int64 limit = 2;
  int64 total = 3;
  repeated Configuration results = 4;
}


message CreateTemplateRequest {
  string messageTemplateId = 1;
  string name = 2;
  string type = 3;
  string content = 4;
  repeated string params = 7;
  string createdBy = 5;
  string language = 6;
}

message UpdateTemplateRequest {
  string messageTemplateId = 1;
  string name = 2;
  string type = 3;
  string content = 4;
  string createdBy = 5;
  string language = 6;
}

message DeleteTemplateRequest {
  string id = 1;
}

message DeleteTemplateResponse {
  string message = 1;
}

message GetTemplateRequest {
  string id = 1;
}

message QueryTemplatesRequest {
  string name = 1;
  string type = 2;
  string createdBy = 3;
  string language = 4;
  int64 page = 5;
  int64 limit = 6;
  string order = 7;
  string sort = 8;
}

message QueryTemplatesResponse {
  int64 page = 1;
  int64 limit = 2;
  int64 total = 3;
  repeated Template results = 4;
}


message MessageAction {
  string name = 1;
  string tips = 2;
  MessageActionTrigger action = 3;
  string nextAction = 4;
}

message MessageActionTrigger {
  string type = 1;
  string url = 2;
  string method = 3;
  google.protobuf.Struct query = 4;
  google.protobuf.Struct body = 5;
}
message CustomEmailConfiguration {
  string emailAccount = 1;
  string emailPassword = 2;
}

message CustomFeishuConfiguration {
  string appId = 1;
  string appSecret = 2;
}

message CustomSmsConfiguration {
  Huawei huawei = 1;
}

message Huawei {
  string sender = 1;
  string signature = 2;
  string templateId = 3;
}

message CustomDingTalkConfiguration {
  string suiteId = 1;
  string appId = 2;
  string miniAppId = 3;
  string suiteKey = 4;
  string suiteSecret = 5;
  string TemplateId = 6;
  string agentId = 7;
}

message SendMessageRequest {
  string appId = 1;
  string openId = 2;
  string classId = 3;
  string subclassId = 4;
  optional string messageTemplateId = 5;
  repeated string params = 13;
  string content = 6;
  string source = 7;
  repeated string target= 8;
  optional CustomEmailRequest customEmailRequest = 9;
  optional CustomSmsRequest customSmsRequest = 10;
  optional CustomFeishuRequest customFeishuRequest = 11;
  optional CustomDingTalkRequest customDingTalkRequest = 12;
}

message CustomEmailRequest {
  string subject = 1;
  string bodyType = 2;
  repeated string cc = 3;
  repeated string bcc = 4;
  repeated string attachments = 5;
}

message CustomSmsRequest {
  repeated string templateParams = 1;
}

message CustomFeishuRequest {
  string receive_id_type = 1; // open_id, user_id, union_id, email, chat_id
  string msg_type = 2; // text
  string companyId = 3; // companyId
}

message CustomDingTalkRequest {
  string companyId = 1;
}

message UpdateMessageRequest {
  string id = 1;
  string status = 2;
  string openId = 3;
}

message DeleteMessageRequest {
  string id = 1;
  string openId = 2;
}

message DeleteMessageResponse {
  string message = 1;
}

message QueryMessagesRequest {
  string appId = 1;
  string openId = 2;
  string classId = 3;
  string subclassId = 4;
  string status = 5;
  int64 page = 6;
  int64 limit = 7;
  string order = 8;
  string sort = 9;
  string classIds = 10; // Seperate classIds by commas like C1,C2,C3
  string subclassIds = 11; // Seperate subclassIds by commas like SC1,SC2,SC3
  string source = 12;
}

message QueryMessagesResponse {
  int64 page = 1;
  int64 limit = 2;
  int64 total = 3;
  repeated Message results = 4;
}

message GetMessagesRequest {
  string openId = 1;
}